# ChangeLog for dev-db/postgresql-base
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-base/ChangeLog,v 1.149 2011/11/06 20:59:29 maekke Exp $

  06 Nov 2011; Markus Meier <maekke@gentoo.org> postgresql-base-9.1.1.ebuild:
  arm stable, bug #388489

  02 Nov 2011; Jeroen Roovers <jer@gentoo.org> postgresql-base-9.1.1.ebuild:
  Stable for HPPA (bug #388489).

  31 Oct 2011; Tony Vroon <chainsaw@gentoo.org> postgresql-base-9.1.1.ebuild:
  Marked stable on AMD64 based on arch testing by Ian "idella4" Delaney &
  Agostino "ago" Sarubbo in bug #388489.

  02 Oct 2011; Aaron W. Swenson <titanofold@gentoo.org>
  -postgresql-base-8.2.21-r2.ebuild, -postgresql-base-8.2.21-r3.ebuild,
  -files/postgresql-8.2-base.patch, -files/postgresql-8.2-common.patch,
  -postgresql-base-8.3.14.ebuild, -postgresql-base-8.3.15-r2.ebuild,
  -postgresql-base-8.3.15-r3.ebuild, -files/postgresql-8.3-base.patch,
  -files/postgresql-8.3-common.patch, -postgresql-base-8.4.7.ebuild,
  -files/postgresql-base-8.4-9.0-heimdal_strlcpy.patch,
  -postgresql-base-8.4.8-r2.ebuild, -postgresql-base-8.4.8-r3.ebuild,
  -files/postgresql-8.4-base.patch, -files/postgresql-8.4-common.patch,
  -files/postgresql-8.x-relax_ssl_perms.patch, -postgresql-base-9.0.3.ebuild,
  -postgresql-base-9.0.4-r2.ebuild, -postgresql-base-9.0.4-r3.ebuild,
  -files/postgresql-base-9.0.4-stdbool.patch,
  -files/postgresql-9.0-base.2.patch, -files/postgresql-9.0-base.3.patch,
  -files/postgresql-9.0-base.patch, -files/postgresql-9.0-common.3.patch,
  -files/postgresql-9.0-common.patch, -files/postgresql-9.0-makefile.patch:
  Removed versions affected by bug 384539 and cleaned out unused files.

  01 Oct 2011; Markos Chandras <hwoarang@gentoo.org>
  postgresql-base-8.2.22.ebuild, postgresql-base-8.3.16.ebuild,
  postgresql-base-8.4.9.ebuild, postgresql-base-9.0.5.ebuild:
  Stable on amd64 wrt bug #384539
