@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-server/postgresql-server-9.1.1.ebuild,v 1.4 2011/11/06 21:04:19 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-server/postgresql-server-9.1.1.ebuild,v 1.5 2011/11/13 16:00:30 maekke Exp $
 
 EAPI="3"
 PYTHON_DEPEND="python? 2"
@@ -8,7 +8,7 @@ PYTHON_DEPEND="python? 2"
 WANT_AUTOMAKE="none"
 inherit autotools eutils flag-o-matic multilib pam prefix python versionator
 
-KEYWORDS="~alpha amd64 arm hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd ~ppc-macos ~x86-solaris"
+KEYWORDS="~alpha amd64 arm hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86 ~x86-fbsd ~ppc-macos ~x86-solaris"
 
 SLOT="$(get_version_component_range 1-2)"
 S="${WORKDIR}/postgresql-${PV}"
