@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/postgresql-server
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-server/ChangeLog,v 1.154 2011/11/06 21:04:19 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-server/ChangeLog,v 1.155 2011/11/13 16:00:30 maekke Exp $
+
+  13 Nov 2011; Markus Meier <maekke@gentoo.org> postgresql-server-9.1.1.ebuild:
+  x86 stable, bug #388489
 
   06 Nov 2011; Markus Meier <maekke@gentoo.org> postgresql-server-9.1.1.ebuild:
   arm stable, bug #388489
